--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -4,7 +4,9 @@ on:
   push:
     branches:
       - 'dev' # Add the develop branch to trigger the workflow
-
+env:
+      CI: true
+      ENVIRONMENT: dev
 jobs:
   docker:
     runs-on: ubuntu-latest
