--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -38,7 +38,7 @@ jobs:
         if: endsWith(github.ref, '/dev')
         run: |
           echo "::set-env name=ENVIRONMENT::dev"
-          ACTIONS_ALLOW_UNSECURE_COMMANDS: false
+          ACTIONS_ALLOW_UNSECURE_COMMANDS: true
 
       - name: Set env to staging
         if: endsWith(github.ref, '/dev')
