--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -15,17 +15,16 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
       
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v7.0.201
-        with:
-          dotnet-version: '3.1'  
+      #- name: Setup .NET
+       # uses: actions/setup-dotnet@v7.0.201
+        #with:
+         # dotnet-version: '3.1'  
 
-      - name: Restore Dependencies
-        run: dotnet restore
+      #- name: Restore Dependencies
+       # run: dotnet restore
 
-      - name: Build
-        run: dotnet build --configuration Release
-
+     # - name: Build
+      #  run: dotnet build --configuration Release 
   deploydev:
     name: Deploy to Dev
     if: github.event_name == 'pull_request'
