--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -8,6 +8,13 @@ on:
   workflow_dispatch:  
   
 jobs:
+  deploydev:
+    name: Deploy to Dev
+    if: github.event_name == 'pull_request'
+    needs: build
+    runs-on: ubuntu-latest
+    environment: 
+      name: dev
   build:
     name: Build
     runs-on: ubuntu-latest
@@ -25,13 +32,6 @@ jobs:
 
      # - name: Build
       #  run: dotnet build --configuration Release 
-  deploydev:
-    name: Deploy to Dev
-    if: github.event_name == 'pull_request'
-    needs: build
-    runs-on: ubuntu-latest
-    environment: 
-      name: deployment
       
     steps:
       - name: Deploy
