--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -3,18 +3,11 @@ name: ci
 on:
   push:
     branches: [dev]
-  pull_request:  
+  pull_request:  # Fixed typo in pull_request
     branches: [dev]
-  workflow_dispatch:  
+  workflow_dispatch:  # Fixed typo in workflow_dispatch
   
 jobs:
-  deploydev:
-    name: Deploy to Dev
-    if: github.event_name == 'pull_request'
-    needs: build
-    runs-on: ubuntu-latest
-    environment: 
-      name: dev
   build:
     name: Build
     runs-on: ubuntu-latest
@@ -22,20 +15,28 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
       
-      #- name: Setup .NET
-       # uses: actions/setup-dotnet@v7.0.201
-        #with:
-         # dotnet-version: '3.1'  
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v7
+        with:
+          dotnet-version: '3.1'  # Adjust to the version you need
 
-      #- name: Restore Dependencies
-       # run: dotnet restore
+      - name: Restore Dependencies
+        run: dotnet restore
 
-     # - name: Build
-      #  run: dotnet build --configuration Release 
-      
-   # steps:
-    #  - name: Deploy
-     #   run: echo I am Deploying!
+      - name: Build
+        run: dotnet build --configuration Release
+
+  deploydev:
+    name: Deploy to Dev
+    if: github.event_name == 'pull_request'
+    needs: build
+    runs-on: ubuntu-latest
+    environment: 
+      name: deployment
+      url: 'http://dev.myapp.com'
+    steps:
+      - name: Deploy
+        run: echo I am Deploying!
         
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
