--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,13 +1,12 @@
 name: ci
 on:
   push:
-    branches: [dev]
+    branches: [dev-deploy]
   pull_request:  # Fixed typo in pull_request
-    branches: [dev]
-  workflow_dispatch:  # Fixed typo in workflow_dispatch 
-
-jobs:
+    branches: [dev-deploy]
+  workflow_dispatch:  # Fixed typo in workflow_dispatch
   
+jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
@@ -25,7 +24,7 @@ jobs:
 
       - name: Build
         run: dotnet build --configuration Release
-    
+        
       - name: dev-deploy
         run: echo Rini is Deploying!
         
@@ -33,7 +32,17 @@ jobs:
         uses: docker/setup-qemu-action@v1
         
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v1  
+
+  deploydev:
+    name: Deploy to dev-deploy
+    if: github.event_name == 'pull_request'
+    needs: build
+    runs-on: ubuntu-latest
+    environment: 
+      name: dev
+     
+    steps:
         
       - name: Login to DockerHub
         uses: docker/login-action@v1
