--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -37,7 +37,7 @@ jobs:
   deploydev:
     name: Deploy to dev
     if: github.event_name == 'pull_request'
-    needs: build
+    #needs: build
     runs-on: ubuntu-latest
     environment: 
       name: dev
