--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,14 +1,15 @@
 name: ci
 
 on:
-  workflow_dispatch:
   push:
-    branches:
-      - dev
+    branches: [dev]
+  pull_request:
+    branches: [dev]
+  workflow_dispatch:
 
 jobs:
   build:
-    name: Build
+    name: build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
@@ -17,26 +18,38 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '3.1'  # Adjust to the version you need
+          dotnet-version: '3.1'
 
       - name: Restore Dependencies
         run: dotnet restore
 
       - name: Build
         run: dotnet build --configuration Release
-        
+
+      - name: dev
+        run: echo Rini is Deploying!
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
-        
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1  
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+  deploydev:
+    name: Deploy to dev
+    if: github.event.ref == 'ref/heads/dev'
+    needs: [build]
+    runs-on: ubuntu-latest
+    environment: 
+      name: dev
+
+    steps:
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
-      
+
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
