--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -2,7 +2,7 @@ name: ci
 
 on:
   push:
-    branches: [dev]
+    branches: [staging]
   pull_request:
     branches: [dev]
   workflow_dispatch:
@@ -37,22 +37,35 @@ jobs:
 
   deploydev:
     name: Deploy to dev
-    if: github.event.ref == 'ref/heads/dev'
+    if: github.event.ref == 'pull request'
     needs: [build]
     runs-on: ubuntu-latest
     environment: 
       name: dev
-
     steps:
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
+    - name: dev
+      run: echo Iam deploying!
+
+  deploystaging:
+    name: Deploy to staging
+    if: github.event.ref == 'ref/heads/main'
+    needs: [build]
+    runs-on: ubuntu-latest
+    environment: 
+      name: staging
+    steps:
+    - name: deploy
+      run: echo Iam deploying!
+      
+    - name: Login to DockerHub
+      uses: docker/login-action@v1
+      with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      - name: Build and push
-        uses: docker/build-push-action@v2
-        with:
+    - name: Build and push
+      uses: docker/build-push-action@v2
+      with:
           context: .
           push: true
           tags: bhargav809/dotnet-poc:dotnet
