--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -9,40 +9,14 @@ on:
 
 jobs:
   build:
+    name: build
     runs-on: ubuntu-latest
     steps:
-     - uses: actions/checkout@v2
-
-     - name: Compile
-       run: Windows
-
-  deploydev:
-    name: Deploy to dev
-    if: github.event.ref == 'pull request'
-    needs: [build]
-    runs-on: ubuntu-latest
-    environment: 
-      name: dev
-    steps:
-    - name: dev
-      run: echo Iam deploying!
-
-  deploystaging:
-    name: Deploy to staging
-    if: github.event.ref == 'ref/heads/main'
-    needs: [build]
-    runs-on: ubuntu-latest
-    environment: 
-      name: staging
-    steps:
-      - name: deploy
-        run: echo Iam deploying!
-
       - name: Checkout Repository
         uses: actions/checkout@v2
       
       - name: Setup .NET
-        uses: actions/setup-dotnet@v4
+        uses: actions/setup-dotnet@v2
         with:
           dotnet-version: '3.1'
 
@@ -53,7 +27,7 @@ jobs:
         run: dotnet build --configuration Release
 
       - name: dev
-        run: echo Rini is Deploying!
+        run: echo " Iam Deploying!"
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
@@ -61,6 +35,28 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
+  deploydev:
+    name: Deploy to dev
+    if: github.event_name == 'pull_request'
+    needs: build
+    runs-on: ubuntu-latest
+    environment: 
+      name: dev
+    steps:
+      - name: Deploy to dev
+        run: echo "I am deploying!"
+
+  deploystaging:
+    name: Deploy to staging
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    needs: build
+    runs-on: ubuntu-latest
+    environment: 
+      name: staging
+    steps:
+      - name: Deploy to staging
+        run: echo "I am deploying!"
+      
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
