--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,24 +1,24 @@
 name: ci
 
 on:
-  workflow_dispatch:
   push:
     branches: [staging]
-  pull_request:
+  pull_request:  # Fixed typo in pull_request
     branches: [dev]
-
+  workflow_dispatch:  # Fixed typo in workflow_dispatch
+  
 jobs:
   build:
-    name: build
+    name: Build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
-
+      
       - name: Setup .NET
-        uses: actions/setup-dotnet@v4
+        uses: actions/setup-dotnet@v2
         with:
-          dotnet-version: '3.1'
+          dotnet-version: '3.1'  # Adjust to the version you need
 
       - name: Restore Dependencies
         run: dotnet restore
@@ -26,43 +26,31 @@ jobs:
       - name: Build
         run: dotnet build --configuration Release
 
-      - name: dev
-        run: echo Rini is Deploying!
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
   deploydev:
     name: Deploy to dev
     if: github.event_name == 'pull_request'
     needs: [build]
     runs-on: ubuntu-latest
-    environment:
+    environment: 
       name: dev
     steps:
       - name: dev
-        run: echo I am deploying to dev branch!
+        run: echo I am Deploying!
 
-  deploystaging:
-    name: Deploy to staging
-    if: github.event_name == 'push' && github.ref == 'refs/heads/staging'
-    needs: [build]
-    runs-on: ubuntu-latest
-    environment:
-      name: staging
-    steps:
-      - name: deploy
-        run: echo I am deploying to staging branch!
-
+    
+   
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+        
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+        
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
-
+      
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
