--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -48,6 +48,8 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      - name: test
+        run: ls
       
       - name: Build and push
         uses: docker/build-push-action@v2
