--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -34,6 +34,8 @@ jobs:
     environment: 
       name: dev
     steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
       - name: dev
         run: echo I am Deploying!
 
