--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,44 +1,16 @@
-name: ci
-
+name: ci-cd
 on:
+  workflow_dispatch: 
   push:
-    branches: [dev]
-  pull_request:  # Fixed typo in pull_request
-    branches: [dev]
-  workflow_dispatch:  # Fixed typo in workflow_dispatch
-  
+    branches:
+      - 'dev'   
 jobs:
-  build:
-    name: Build
+  docker:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
+      - name: Checkout
         uses: actions/checkout@v2
-      
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v2
-        with:
-          dotnet-version: '3.1'  # Adjust to the version you need
-
-      - name: Restore Dependencies
-        run: dotnet restore
-
-      - name: Build
-        run: dotnet build --configuration Release
-
-  deploydev:
-    name: Deploy to dev
-    #if: github.event_name == 'pull_request'
-    needs: [build]
-    runs-on: ubuntu-latest
-    environment: 
-      name: dev
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-      - name: dev
-        run: echo I am Deploying!
-
+        
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
         
@@ -50,9 +22,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
-      - name: test
-        run: ls
-      
+          
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
