--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -17,8 +17,8 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
-      - name: dev
-        run: echo I am Deploying!
+      - name: testing
+        run: echo Rini is Deploying!
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1       
       - name: Set up Docker Buildx
