--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -9,11 +9,10 @@ on:
   
 jobs:
   build:
-    name: Build and Push
+    name: deploy to staging
     if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
-    # environment: 
-    #   name: testing
+   
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
