--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,35 +1,54 @@
-name: ci-testing
+name: ci/cd-testing
 
 on:
   push:
     branches: [testing]
-  pull_request:  # Fixed typo in pull_request
+  pull_request:
     branches: [testing]
-  workflow_dispatch:  # Fixed typo in workflow_dispatch
-  
+  workflow_dispatch:
+
 jobs:
   build:
-    name: deploy to staging
-    if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
-   
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
       - name: testing
-        run: echo Rini is Deploying!
+        run: echo "Rini is Deploying!"
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1       
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1       
+        uses: docker/setup-buildx-action@v1
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}     
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}   
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
           context: .
           push: true
           tags: bhargav809/dotnet-poc:dotnet
+
+  deploystaging:
+    name: deploy to staging
+    if: github.event_name == 'pull_request'
+    needs: [build]
+    runs-on: ubuntu-latest
+    environment: 
+      name: testing
+    steps: 
+      - name: deploy
+        run: echo "Rini is deploying!"
+
+  deployproduction:
+    name: deploy to production
+    if: github.event_name == 'push' && github.ref == 'refs/heads/production'
+    needs: [build]
+    runs-on: ubuntu-latest
+    environment: 
+      name: production
+    steps: 
+      - name: deploy
+        run: echo "Rini is deploying!"
