--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -1,28 +1,31 @@
-name: ci
+name: ci-testing
+
 on:
-  workflow_dispatch: 
   push:
-    branches:
-      - 'dev'   
+    branches: [develop]
+  pull_request:  # Fixed typo in pull_request
+    branches: [develop]
+  
+  
 jobs:
-  docker:
+  build:
+    name: Build and Push
+    if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout Repository
         uses: actions/checkout@v2
-        
+      - name: develop
+        run: echo I am Deploying!
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-        
+        uses: docker/setup-qemu-action@v1       
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-        
+        uses: docker/setup-buildx-action@v1       
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-          
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}     
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
