--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,32 +1,102 @@
-name: ci-cd
+name: CI/CD for .NET
 on:
   push:
     branches:
-      - 'main'
+      - staging
+      - Release
+  pull_request:
+    branches:
+      - '*'
+  workflow_dispatch:
 jobs:
-  docker:
+  Pre-Dev-Steps:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-        
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-        
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-          
-      - name: Build and push
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: bhargav809/dotnet-poc:dotnet
-    
-  
+      - name: 'Run some predev steps'
+        run: |
+          Write-Host 'Done some pre dev env deploy work'
+  feature-Env:
+      runs-on: ubuntu-latest
+      needs: Pre-Dev-Steps
+      environment:
+        name: feature
+      steps:
+        - name: 'Run some dev env steps'
+          run: |
+            Write-Host 'Done some dev env deploy work'
+  build:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request'
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: '6.0'
+    - name: Restore dependencies
+      run: dotnet restore
+    - name: Build
+      run: dotnet build
+    - name: Test
+      run: dotnet test
+  deploy-staging:
+    runs-on: ubuntu-latest
+    #needs: build
+    if: github.event_name == 'push' && github.ref == 'refs/heads/staging' && 'workflow_dispatch'
+    steps:
+    - uses: trstringer/manual-approval@v1
+      with:
+       secret: ${{ secrets.GITHUBTOKEN }}
+       approvers: giritkp,bhargavguntreddi98
+       minimum-approvals: 1
+       issue-title: "Deploying v9.0.0 from feature to main"
+       issue-body: "Please approve or deny the deployment of version v9.0.0"
+       exclude-workflow-initiator-as-approver: false
+       additional-approved-words: ''
+       additional-denied-words: ''
+    - name: Checkout code
+      uses: actions/checkout@v2
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: '6.0'
+    - name: Publish
+      run: dotnet publish -c Release -o ./publish
+    - name: Deploy to Azure Web App
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: zelar12
+        #slot-name: <slot-name>
+        publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISH_PROFILE_STAGING }}
+        package: ./publish
+  deploy-Release:
+    runs-on: ubuntu-latest
+    needs: deploy-staging
+    #if: github.event_name == 'push' && github.ref == 'refs/heads/Release' && 'workflow_dispatch'
+    steps:
+    - uses: trstringer/manual-approval@v1
+      with:
+       secret: ${{ secrets.GITHUBTOKEN }}
+       approvers: giritkp,bhargavguntreddi98
+       minimum-approvals: 1
+       issue-title: "Deploying v9.0.0 from feature to main"
+       issue-body: "Please approve or deny the deployment of version v9.0.0"
+       exclude-workflow-initiator-as-approver: false
+       additional-approved-words: ''
+       additional-denied-words: ''
+    - name: Checkout code
+      uses: actions/checkout@v2
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: '6.0'
+    - name: Publish
+      run: dotnet publish -c Release -o ./publish
+    - name: Deploy to Azure Web App
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: zelar11
+        #slot-name: <slot-name>
+        publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISH_PROFILE }}
+        package: ./publish
