--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
     - uses: trstringer/manual-approval@v1
       with:
        secret: ${{ secrets.GITHUBTOKEN }}
-       approvers: giritkp,bhargavguntreddi98
+       approvers: rinizelar
        minimum-approvals: 1
        issue-title: "Deploying v9.0.0 from feature to main"
        issue-body: "Please approve or deny the deployment of version v9.0.0"
