--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,29 +1,15 @@
 name: CI/CD for .NET
+
 on:
   push:
     branches:
-      - staging
-      - Release
+      - main
   pull_request:
     branches:
       - '*'
   workflow_dispatch:
+
 jobs:
-  Pre-Dev-Steps:
-    runs-on: ubuntu-latest
-    steps:
-      - name: 'Run some predev steps'
-        run: |
-          Write-Host 'Done some pre dev env deploy work'
-  feature-Env:
-      runs-on: ubuntu-latest
-      needs: Pre-Dev-Steps
-      environment:
-        name: feature
-      steps:
-        - name: 'Run some dev env steps'
-          run: |
-            Write-Host 'Done some dev env deploy work'
   build:
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request'
@@ -40,51 +26,23 @@ jobs:
       run: dotnet build
     - name: Test
       run: dotnet test
-  deploy-staging:
+
+  deploy:
     runs-on: ubuntu-latest
-    #needs: build
-    if: github.event_name == 'push' && github.ref == 'refs/heads/staging' && 'workflow_dispatch'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main' && github.event_name != 'workflow_dispatch'
+    needs: build
     steps:
     - uses: trstringer/manual-approval@v1
       with:
-       secret: ${{ secrets.GITHUBTOKEN }}
-       approvers: giritkp,bhargavguntreddi98
-       minimum-approvals: 1
-       issue-title: "Deploying v9.0.0 from feature to main"
-       issue-body: "Please approve or deny the deployment of version v9.0.0"
-       exclude-workflow-initiator-as-approver: false
-       additional-approved-words: ''
-       additional-denied-words: ''
-    - name: Checkout code
-      uses: actions/checkout@v2
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: '6.0'
-    - name: Publish
-      run: dotnet publish -c Release -o ./publish
-    - name: Deploy to Azure Web App
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: zelar12
-        #slot-name: <slot-name>
-        publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISH_PROFILE_STAGING }}
-        package: ./publish
-  deploy-Release:
-    runs-on: ubuntu-latest
-    needs: deploy-staging
-    #if: github.event_name == 'push' && github.ref == 'refs/heads/Release' && 'workflow_dispatch'
-    steps:
-    - uses: trstringer/manual-approval@v1
-      with:
-       secret: ${{ secrets.GITHUBTOKEN }}
-       approvers: giritkp,bhargavguntreddi98
-       minimum-approvals: 1
-       issue-title: "Deploying v9.0.0 from feature to main"
-       issue-body: "Please approve or deny the deployment of version v9.0.0"
-       exclude-workflow-initiator-as-approver: false
-       additional-approved-words: ''
-       additional-denied-words: ''
+        secret: ${{ github.TOKEN }}
+        approvers: bhargavguntreddi98
+        minimum-approvals: 1
+        issue-title: "Deploy approval for version v1.0.0"
+        issue-body: "Please approve or deny the deployment of version v1.0.0"
+        exclude-workflow-initiator-as-approver: false
+        additional-approved-words: ''
+        additional-denied-words: ''
+
     - name: Checkout code
       uses: actions/checkout@v2
     - name: Setup .NET
@@ -97,6 +55,5 @@ jobs:
       uses: azure/webapps-deploy@v2
       with:
         app-name: zelar11
-        #slot-name: <slot-name>
         publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISH_PROFILE }}
         package: ./publish
